--- a/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
+++ b/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
@@ -95,7 +95,7 @@
     
 </section>
 
-<div class="modal" tabindex="-1" id="aceptar">
+<modalAceptar class="modal" tabindex="-1" id="aceptar">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -111,9 +111,9 @@
             </div>
         </div>
     </div>
-</div>
+</modalAceptar>
 
-<div class="modal" tabindex="-1" id="notificar">
+<modalNotificar class="modal" tabindex="-1" id="notificar">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -125,10 +125,10 @@
             </div>
         </div>
     </div>
-</div>
+</modalNotificar>
 
 
-<div class="modal" tabindex="-1" id="rechazar">
+<modalRechazar class="modal" tabindex="-1" id="rechazar">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -144,9 +144,9 @@
             </div>
         </div>
     </div>
-</div>
+</modalRechazar>
 
-<div class="modal" tabindex="-1" id="justificar">
+<modalJustificar class="modal" tabindex="-1" id="justificar">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -162,7 +162,7 @@
             </div>
         </div>
     </div>
-</div>
+</modalJustificar>
 
 
 <!-- Alert before acepting request -->
