--- a/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
@@ -1,14 +1,14 @@
 ﻿@page
-@model CancherksWebApp.Pages.Admin.ReportesModel
+@model CancherksWebApp.Pages.Admin.AgregarInstalacionModel
 @{
 }
 
 <section class="container px-5 py-3">
-    <h3 style="margin-bottom: 2rem;">Reportes</h3>
-    <filters class="d-flex align-items-center py-3">
-       
+    <h3 style="margin-bottom: 2rem;">Agregar Instalación</h3>
+    <div class="d-flex align-items-center py-3">
+
         <dropdown class="dropdown">
-            
+
             <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownInstallations" data-bs-toggle="dropdown" aria-expanded="false">
                 Instalaciones
             </button>
@@ -19,40 +19,40 @@
             </ul>
         </dropdown>
 
-        <datepickers style="display: flex; justify-content: center; flex-grow: 1;">
-        <form class="row me-3">
-            <div class="col-12">
-                <inputDate class="input-group date" id="datepickerInicio-container">
-                    <input type="text" class="form-control" id="datepickerInicio-input" placeholder="Fecha Inicio" />
-                    <span class="input-group-append" id="datepickerInicio-icon">
-                        <span class="input-group-text bg-light d-block">
-                            <i class="bi bi-calendar-check"></i>
+        <div style="display: flex; justify-content: center; flex-grow: 1;">
+            <form class="row me-3">
+                <div class="col-12">
+                    <div class="input-group date" id="datepickerInicio-container">
+                        <input type="text" class="form-control" id="datepickerInicio-input" placeholder="Fecha Inicio" />
+                        <span class="input-group-append" id="datepickerInicio-icon">
+                            <span class="input-group-text bg-light d-block">
+                                <i class="bi bi-calendar-check"></i>
+                            </span>
                         </span>
-                    </span>
-                </inputDate>
+                    </div>
 
-            </div>
-        </form>
+                </div>
+            </form>
 
-        <form class="row">
-            <div class="col-12">
-                <inputDate class="input-group date" id="datepickerFinal-container">
-                    <input type="text" class="form-control" id="datepickerFinal-input" placeholder="Fecha Final" />
-                    <span class="input-group-append" id="datepickerFinal-icon">
-                        <span class="input-group-text bg-light d-block">
-                            <i class="bi bi-calendar-check"></i>
+            <form class="row">
+                <div class="col-12">
+                    <div class="input-group date" id="datepickerFinal-container">
+                        <input type="text" class="form-control" id="datepickerFinal-input" placeholder="Fecha Final" />
+                        <span class="input-group-append" id="datepickerFinal-icon">
+                            <span class="input-group-text bg-light d-block">
+                                <i class="bi bi-calendar-check"></i>
+                            </span>
                         </span>
-                    </span>
-                </inputDate>
+                    </div>
 
-            </div>
-        </form>
-        </datepickers>
+                </div>
+            </form>
+        </div>
 
         <button type="button" class="btn btn-primary button-gradient" data-bs-toggle="modal" data-bs-target="#reporte">Generar</button>
 
 
-    </filters>
+    </div>
 
 
     <table class="table" style="margin-top: 1rem;">
@@ -114,13 +114,13 @@
                 <td>Pendiente</td>
 
             </tr>
-            
+
         </tbody>
     </table>
 
 </section>
 
-<modalReporte class="modal" tabindex="-1" id="reporte">
+<div class="modal" tabindex="-1" id="reporte">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -130,8 +130,7 @@
             <div class="modal-body">
                 <p>El reporte se generó exitosamente.</p>
             </div>
-            
+
         </div>
     </div>
-</modalReporte>
-
+</div>
