--- a/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
@@ -5,132 +5,147 @@
 
 <section class="container px-5 py-3">
     <h3 style="margin-bottom: 2rem;">Agregar Instalación</h3>
-    <div class="d-flex align-items-center py-3">
 
-        <dropdown class="dropdown">
-
-            <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownInstallations" data-bs-toggle="dropdown" aria-expanded="false">
-                Instalaciones
-            </button>
-            <ul class="dropdown-menu custom-dropdown-options" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item custom-dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item custom-dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item custom-dropdown-item" href="#">Something else here</a></li>
-            </ul>
-        </dropdown>
-
-        <div style="display: flex; justify-content: center; flex-grow: 1;">
-            <form class="row me-3">
-                <div class="col-12">
-                    <div class="input-group date" id="datepickerInicio-container">
-                        <input type="text" class="form-control" id="datepickerInicio-input" placeholder="Fecha Inicio" />
-                        <span class="input-group-append" id="datepickerInicio-icon">
-                            <span class="input-group-text bg-light d-block">
-                                <i class="bi bi-calendar-check"></i>
-                            </span>
-                        </span>
+    <div class="row"> 
+        <div class="col-md-6">
+            <formulario>
+                <form>
+                    <div class="mb-3">
+                        <label class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="inputName" placeholder="Ingrese el nombre.">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Ubicación</label>
+                        <input type="text" class="form-control" id="inputlocation" placeholder="Ingrese la ubicación.">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Cantidad Máxima Personas</label>
+                        <input type="text" class="form-control" id="inputCantPeople" placeholder="Ingrese la cantidad máxima permitida en la instalación.">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Tiempo máximo por reservación</label>
+                        <input type="text" class="form-control" id="inputTimeSplitReservation" placeholder="Ingrese el tiempo máximo por reservación permitido.">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Descripción</label>
+                        <textarea class="form-control" id="inputDescription" placeholder="Ingrese la descripción." style="height: 100px;"></textarea>
+             
                     </div>
 
-                </div>
-            </form>
+                    <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+                    <label class="form-label">Foto</label>
+                    <div class="file-upload mb-3">
+                        
+                        <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Agregue una imagen</button>
 
-            <form class="row">
-                <div class="col-12">
-                    <div class="input-group date" id="datepickerFinal-container">
-                        <input type="text" class="form-control" id="datepickerFinal-input" placeholder="Fecha Final" />
-                        <span class="input-group-append" id="datepickerFinal-icon">
-                            <span class="input-group-text bg-light d-block">
-                                <i class="bi bi-calendar-check"></i>
-                            </span>
-                        </span>
+                        <div class="image-upload-wrap">
+                            <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
+                            <div class="drag-text">
+                                <h3>Presione click o arraste la imagen que desea subir.</h3>
+                            </div>
+                        </div>
+                        <div class="file-upload-content">
+                            <img class="file-upload-image" src="#" alt="your image" />
+                            <div class="image-title-wrap">
+                                <button type="button" onclick="removeUpload()" class="remove-image">Remover <span class="image-title">Uploaded Image</span></button>
+                            </div>
+                        </div>
                     </div>
+                    <button type="submit" class="btn btn-primary button-gradient">Submit</button>
+                </form>
 
-                </div>
-            </form>
+            </formulario>
         </div>
-
-        <button type="button" class="btn btn-primary button-gradient" data-bs-toggle="modal" data-bs-target="#reporte">Generar</button>
-
-
+        <div class="col-md-6">
+            <label class="mb-3">Disponibilidad</label>
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Lunes
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Martes
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Miércoles
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Jueves
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Viernes
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Sábado
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Domingo
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-
-
-    <table class="table" style="margin-top: 1rem;">
-        <thead>
-            <tr>
-                <th scope="col">Elegir</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Apellido 1</th>
-                <th scope="col">Apellido 2</th>
-                <th scope="col">Carné</th>
-                <th scope="col">Correo</th>
-                <th scope="col">Fecha</th>
-                <th scope="col">Hora Inicio</th>
-                <th scope="col">Hora Final</th>
-                <th scope="col">Actividad</th>
-                <th scope="col">Estado</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><input type="checkbox" class="custom-checkbox" name="select1" value="1"></td>
-                <td>María Fernanda</td>
-                <td>Murillo</td>
-                <td>Mena</td>
-                <td>2021077803</td>
-                <td>fermurillo04@estudiantec.cr</td>
-                <td>10/04/2023</td>
-                <td>10:00 am</td>
-                <td>12:00 pm</td>
-                <td>Correr</td>
-                <td>Pendiente</td>
-
-            </tr>
-            <tr>
-                <td><input type="checkbox" name="select1" value="1"></td>
-                <td>María Fernanda</td>
-                <td>Murillo</td>
-                <td>Mena</td>
-                <td>2021077803</td>
-                <td>fermurillo04@estudiantec.cr</td>
-                <td>10/04/2023</td>
-                <td>10:00 am</td>
-                <td>12:00 pm</td>
-                <td>Correr</td>
-                <td>Pendiente</td>
-
-            </tr>
-            <tr>
-                <td><input type="checkbox" name="select1" value="1"></td>
-                <td>María Fernanda</td>
-                <td>Murillo</td>
-                <td>Mena</td>
-                <td>2021077803</td>
-                <td>fermurillo04@estudiantec.cr</td>
-                <td>10/04/2023</td>
-                <td>10:00 am</td>
-                <td>12:00 pm</td>
-                <td>Correr</td>
-                <td>Pendiente</td>
-
-            </tr>
-
-        </tbody>
-    </table>
 
 </section>
 
-<div class="modal" tabindex="-1" id="reporte">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">ATENCIÓN!</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>El reporte se generó exitosamente.</p>
-            </div>
-
-        </div>
-    </div>
-</div>
