--- a/CancherksWebApp/wwwroot/css/site.css
+++ b/CancherksWebApp/wwwroot/css/site.css
@@ -224,6 +224,109 @@ img {
     color: #DC3545; 
 }
 
+/* upload format */
 
+.file-upload {
+    background-color: #ffffff;
+    width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+}
 
+.file-upload-btn {
+    width: 100%;
+    margin: 0;
+    color: #fff;
+    background: var(--gradientMaincolor);
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+    transition: all .2s ease;
+    outline: none;
+    font-weight: 500;
+}
 
+.file-upload-btn:hover {
+        background: var(--colorMainTrans);
+        color: var(--textGrey);
+        transition: all .2s ease;
+        cursor: pointer;
+        border: 1px solid var(--colorMain);
+}
+
+.file-upload-content {
+    display: none;
+    text-align: center;
+}
+
+.file-upload-input {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.image-upload-wrap {
+    margin-top: 20px;
+    border: 2px dashed var(--colorMain);
+    position: relative;
+}
+
+.image-dropping, .image-upload-wrap:hover {
+        background-color: var(--colorMainTrans);
+        border: 3px dashed var(--colorMain);
+}
+
+.image-title-wrap {
+    padding: 0 15px 15px 15px;
+    color: #222;
+}
+
+.drag-text {
+    text-align: center;
+}
+
+.drag-text h3 {
+        font-weight: 100;
+        text-transform: uppercase;
+        color: var(--colorMain);
+        padding: 60px 0;
+}
+
+.file-upload-image {
+    max-height: 200px;
+    max-width: 200px;
+    margin: auto;
+    padding: 20px;
+}
+
+.remove-image {
+    width: 200px;
+    margin: 0;
+    color: #fff;
+    background: #cd4535;
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+    border-bottom: 4px solid #b02818;
+    transition: all .2s ease;
+    outline: none;
+    font-weight: 500;
+}
+
+.remove-image:hover {
+    background: #c13b2a;
+    color: #ffffff;
+    transition: all .2s ease;
+    cursor: pointer;
+
+}
+
+.remove-image:active {
+        border: 0;
+        transition: all .2s ease;
+}
