--- a/CancherksWebApp/Pages/Admin/Reportes.cshtml
+++ b/CancherksWebApp/Pages/Admin/Reportes.cshtml
@@ -49,7 +49,7 @@
         </form>
         </datepickers>
 
-        <button type="button" class="btn btn-primary button-gradient" data-bs-toggle="modal" data-bs-target="#reporte">Generar</button>
+        <button type="button" class="btn btn-primary button-gradient" data-bs-toggle="modal" data-bs-target="#report">Generar</button>
 
 
     </filters>
@@ -120,7 +120,7 @@
 
 </section>
 
-<modalReporte class="modal" tabindex="-1" id="reporte">
+<modalReport class="modal" tabindex="-1" id="report">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -133,5 +133,5 @@
             
         </div>
     </div>
-</modalReporte>
+</modalReport>
 
