--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                         var requestManagementIsActive = Context.Request.Path.Value.Contains("/Admin/GestionSolicitudes");
                         var reportManagementIsActive = Context.Request.Path.Value.Contains("/Admin/Reportes");
                         var addInstallationManagementIsActive = Context.Request.Path.Value.Contains("/Admin/AgregarInstalacion");
+                        var modifyInstallationManagementIsActive = Context.Request.Path.Value.Contains("/Admin/ModificarInstalacion");
 
                     }
 
@@ -56,6 +57,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link @(addInstallationManagementIsActive ? "active" : "")" asp-area="" asp-page="/Admin/AgregarInstalacion">Agregar Instalacion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link @(modifyInstallationManagementIsActive ? "active" : "")" asp-area="" asp-page="/Admin/ModificarInstalacion">Modificar Instalacion</a>
                         </li>
                     </ul>
                 </div>
