modify almost ready
few changes needed

--- a/CancherksWebApp/Pages/Admin/ModificarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/ModificarInstalacion.cshtml
@@ -15,10 +15,6 @@
                         <input type="text" class="form-control" id="inputName" placeholder="Ingrese el nombre.">
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Ubicación</label>
-                        <input type="text" class="form-control" id="inputlocation" placeholder="Ingrese la ubicación.">
-                    </div>
-                    <div class="mb-3">
                         <label class="form-label">Cantidad Máxima Personas</label>
                         <input type="text" class="form-control" id="inputCantPeople" placeholder="Ingrese la cantidad máxima permitida en la instalación.">
                     </div>
@@ -30,6 +26,10 @@
                         <label class="form-label">Descripción</label>
                         <textarea class="form-control" id="inputDescription" placeholder="Ingrese la descripción." style="height: 100px;"></textarea>
 
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Actividades</label>
+                        <button type="button" id="btnActivity" class="btn btn-primary button-gradient full-width">Agregar actividades</button>
                     </div>
 
                     <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -51,7 +51,8 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary button-gradient full-width">Submit</button>
+
+                    <button type="submit" class="btn btn-primary button-gradient full-width">Agregar</button>
 
                 </form>
 
@@ -284,6 +285,32 @@
     </div>
 </modalAdd>
 
+<modalActivity class="modal" tabindex="-1" id="modalActivity">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">ATENCIÓN!</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Seleccione los deportes.</p>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                    <label class="form-check-label" for="inlineCheckbox1">Fútbol</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                    <label class="form-check-label" for="inlineCheckbox2">Correr</label>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary button-gradient" data-bs-dismiss="modal">Aceptar</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+            </div>
+        </div>
+    </div>
+</modalActivity>
+
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         var form = document.querySelector('form');
@@ -291,8 +318,18 @@
 
         form.addEventListener('submit', function (event) {
             event.preventDefault();
-            // Aquí puedes agregar código para enviar tus datos de formulario por AJAX, si lo necesitas.
             addInstallationModal.show();
+        });
+    });
+</script>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var btnActivity = document.getElementById('btnActivity');
+        var modalActivity = new bootstrap.Modal(document.getElementById('modalActivity'));
+
+        btnActivity.addEventListener('click', function () {
+            modalActivity.show();
         });
     });
 </script>
