--- a/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
@@ -33,8 +33,20 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Actividades</label>
-                        <button type="button" id="btnActivity" class="btn btn-primary button-gradient full-width">Elegir actividades</button>
+                        <div class="checkbox-container full-width">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">Fútbol</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">Correr</label>
+                            </div>
+                        </div>
                     </div>
+
+
+
 
                     <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
                     <label class="form-label">Foto</label>
