modify window view ready
modify window view ready, still needs to load data dinamically

--- a/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
+++ b/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
@@ -24,7 +24,6 @@
                 <th scope="col">Elegir</th>
                 <th scope="col">Nombre</th>
                 <th scope="col">Apellido 1</th>
-                <th scope="col">Apellido 2</th>
                 <th scope="col">Carné</th>
                 <th scope="col">Correo</th>
                 <th scope="col">Instalación</th>
@@ -39,13 +38,12 @@
                 <td><input type="checkbox" class="custom-checkbox" name="select1" value="1"></td>
                 <td>María Fernanda</td>
                 <td>Murillo</td>
-                <td>Mena</td>
                 <td>2021077803</td>
                 <td>fermurillo04@estudiantec.cr</td>
+                <td>pista</td>
                 <td>10/04/2023</td>
                 <td>10:00 am</td>
                 <td>12:00 pm</td>
-                <td>Correr</td>
                 <td>
                     <i class="bi bi-check-circle-fill custom-success" style="cursor:pointer;"></i>
 
@@ -57,13 +55,12 @@
                 <td><input type="checkbox" name="select1" value="1"></td>
                 <td>María Fernanda</td>
                 <td>Murillo</td>
-                <td>Mena</td>
                 <td>2021077803</td>
                 <td>fermurillo04@estudiantec.cr</td>
+                <td>pista</td>
                 <td>10/04/2023</td>
                 <td>10:00 am</td>
                 <td>12:00 pm</td>
-                <td>Correr</td>
                 <td>
                     <i class=" bi bi-check-circle-fill custom-success"></i>
                     <i class="bi bi-trash-fill custom-danger"></i>
@@ -74,13 +71,12 @@
                 <td><input type="checkbox" name="select1" value="1"></td>
                 <td>María Fernanda</td>
                 <td>Murillo</td>
-                <td>Mena</td>
                 <td>2021077803</td>
                 <td>fermurillo04@estudiantec.cr</td>
+                <td>pista</td>
                 <td>10/04/2023</td>
                 <td>10:00 am</td>
                 <td>12:00 pm</td>
-                <td>Correr</td>
                 <td>
                     <i class=" bi bi-check-circle-fill custom-success"></i>
                     <i class="bi bi-trash-fill custom-danger"></i>
