table loads data
table loads data from database, some changes are needed but only after the api fro te architecture group works correctly in our project

--- a/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
+++ b/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
@@ -24,9 +24,6 @@
         <thead>
             <tr>
                 <th scope="col">Elegir</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">Apellido 1</th>
-                <th scope="col">Carné</th>
                 <th scope="col">Correo</th>
                 <th scope="col">Instalación</th>
                 <th scope="col">Fecha</th>
@@ -36,57 +33,23 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td><input type="checkbox" class="custom-checkbox" name="select1" value="1"></td>
-                <td>María Fernanda</td>
-                <td>Murillo</td>
-                <td>2021077803</td>
-                <td>fermurillo04@estudiantec.cr</td>
-                <td>pista</td>
-                <td>10/04/2023</td>
-                <td>10:00 am</td>
-                <td>12:00 pm</td>
-                <td>
-                    <i class="bi bi-check-circle-fill custom-success" style="cursor:pointer;"></i>
-
-                    <i class="bi bi-trash-fill custom-danger" style="cursor:pointer;"></i>
-                </td>
-
-            </tr>
-            <tr>
-                <td><input type="checkbox" name="select1" value="1"></td>
-                <td>María Fernanda</td>
-                <td>Murillo</td>
-                <td>2021077803</td>
-                <td>fermurillo04@estudiantec.cr</td>
-                <td>pista</td>
-                <td>10/04/2023</td>
-                <td>10:00 am</td>
-                <td>12:00 pm</td>
-                <td>
-                    <i class=" bi bi-check-circle-fill custom-success"></i>
-                    <i class="bi bi-trash-fill custom-danger"></i>
-                </td>
-
-            </tr>
-            <tr>
-                <td><input type="checkbox" name="select1" value="1"></td>
-                <td>María Fernanda</td>
-                <td>Murillo</td>
-                <td>2021077803</td>
-                <td>fermurillo04@estudiantec.cr</td>
-                <td>pista</td>
-                <td>10/04/2023</td>
-                <td>10:00 am</td>
-                <td>12:00 pm</td>
-                <td>
-                    <i class=" bi bi-check-circle-fill custom-success"></i>
-                    <i class="bi bi-trash-fill custom-danger"></i>
-                </td>
-
-            </tr>
-
+            @foreach (var request in Model.Requests)
+            {
+                <tr>
+                    <td><input type="checkbox" class="custom-checkbox" name="select1" value="@request.Id"></td>
+                    <td>@request.EmailRequester</td>
+                    <td>@Model.Installations.FirstOrDefault(i => i.Id == request.IdInstallation)?.Name</td>
+                    <td>@request.DateRequest.ToShortDateString()</td>
+                    <td>@request.StartTime.ToString()</td>
+                    <td>@request.EndTime.ToString()</td>
+                    <td>
+                        <i class="bi bi-check-circle-fill custom-success" style="cursor:pointer;"></i>
+                        <i class="bi bi-trash-fill custom-danger" style="cursor:pointer;"></i>
+                    </td>
+                </tr>
+            }
         </tbody>
+
     </table>
 
 
