--- a/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
+++ b/CancherksWebApp/Pages/Admin/GestionSolicitudes.cshtml
@@ -3,23 +3,22 @@
 @{
 }
 
-
 <section class="container px-5 py-3" >
     <h3 style="margin-bottom: 2rem;">Solicitudes</h3>
-    <dropdown class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownInstallations" data-bs-toggle="dropdown" aria-expanded="false">
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
             Instalaciones
         </button>
-        <ul class="dropdown-menu custom-dropdown-options" aria-labelledby="dropdownMenuButton1">
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             @foreach (var installation in Model.Installations)
             {
-                <li><a class="dropdown-item custom-dropdown-item" href="#">@installation.Name</a></li>
+                <li><a class="dropdown-item custom-dropdown-item" data-id="@installation.Id" href="#">@installation.Name</a></li>
             }
         </ul>
+    </div>
 
 
-    </dropdown>
-    
+
     <table class="table" style="margin-top: 1rem;">
         <thead>
             <tr>
@@ -35,7 +34,7 @@
         <tbody>
             @foreach (var request in Model.Requests)
             {
-                <tr>
+                <tr data-installation-id="@request.IdInstallation">
                     <td><input type="checkbox" class="custom-checkbox" name="select1" value="@request.Id"></td>
                     <td>@request.EmailRequester</td>
                     <td>@Model.Installations.FirstOrDefault(i => i.Id == request.IdInstallation)?.Name</td>
@@ -52,8 +51,6 @@
 
     </table>
 
-
-    
 </section>
 
 <modalAcept class="modal" tabindex="-1" id="acept">
@@ -206,6 +203,44 @@
                 var notificarModal = new bootstrap.Modal(document.getElementById('notify'));
                 notificarModal.show();
             }, 200); 
+        });
+    });
+</script>
+
+<!-- Filter Data -->
+<script>
+    document.querySelectorAll('.custom-dropdown-item').forEach(item => {
+        item.addEventListener('click', function () {
+            var installationId = this.getAttribute('data-id'); 
+            filterTable(installationId); 
+        });
+    });
+
+    function filterTable(installationId) {
+        var tableRows = document.querySelectorAll('.table tbody tr'); 
+        tableRows.forEach(row => {
+            var rowInstallationId = row.getAttribute('data-installation-id'); 
+            if (rowInstallationId != installationId) {
+                row.style.display = 'none'; 
+            } else {
+                row.style.display = '';
+            }
+        });
+    }
+</script>
+
+<!-- Change placeholder when user selects option -->
+<script>
+    document.addEventListener('DOMContentLoaded', () => { // Asegura que el DOM está completamente cargado
+        const dropdownItems = document.querySelectorAll('.custom-dropdown-item');
+
+        dropdownItems.forEach(item => {
+            item.addEventListener('click', function () {
+                const selectedText = this.textContent || this.innerText; // Obtiene el texto del item seleccionado
+                document.getElementById('dropdownMenuButton').textContent = selectedText; // Cambia el texto del botón
+                const installationId = this.getAttribute('data-id'); // Obtiene el ID de la instalación
+                filterTable(installationId); // Llama a la función para filtrar la tabla
+            });
         });
     });
 </script>
