--- a/CancherksWebApp/Pages/Shared/_Layout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_Layout.cshtml
@@ -41,25 +41,25 @@
 
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link @(option1IsActive ? "active" : "")" asp-area="" asp-page="/Option1">Option1</a>
+                            <a class="nav-link @(option1IsActive ? "activeNav" : "")" asp-area="" asp-page="/Option1">Option1</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(option2IsActive ? "active" : "")" asp-area="" asp-page="/Option2">Option2</a>
+                            <a class="nav-link @(option2IsActive ? "activeNav" : "")" asp-area="" asp-page="/Option2">Option2</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(option3IsActive ? "active" : "")" asp-area="" asp-page="/Option3">Option3</a>
+                            <a class="nav-link @(option3IsActive ? "activeNav" : "")" asp-area="" asp-page="/Option3">Option3</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(requestManagementIsActive ? "active" : "")" asp-area="" asp-page="/Admin/GestionSolicitudes">Gestion Solicitudes</a>
+                            <a class="nav-link @(requestManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/GestionSolicitudes">Gestion Solicitudes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(reportManagementIsActive ? "active" : "")" asp-area="" asp-page="/Admin/Reportes">Reportes</a>
+                            <a class="nav-link @(reportManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/Reportes">Reportes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(addInstallationManagementIsActive ? "active" : "")" asp-area="" asp-page="/Admin/AgregarInstalacion">Agregar Instalacion</a>
+                            <a class="nav-link @(addInstallationManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/AgregarInstalacion">Agregar Instalacion</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link @(modifyInstallationManagementIsActive ? "active" : "")" asp-area="" asp-page="/Admin/ModificarInstalacion">Modificar Instalacion</a>
+                            <a class="nav-link @(modifyInstallationManagementIsActive ? "activeNav" : "")" asp-area="" asp-page="/Admin/ModificarInstalacion">Modificar Instalacion</a>
                         </li>
                     </ul>
                 </div>
